--- a/requirements.txt
+++ b/requirements.txt
@@ -20,6 +20,7 @@ python-dotenv==1.0.0
 # Utilities
 python-dateutil==2.8.2
 schedule==1.2.1
+gunicorn==21.2.0
 
 # Testing
 pytest==7.4.3
@@ -28,3 +29,4 @@ pytest-cov==4.1.0
 # Development
 black==23.12.1
 flake8==6.1.0
+
